--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,93 +11,101 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimaryDark"
-        android:orientation="horizontal"
-        >
+        android:orientation="vertical">
 
-        <!--会话-->
+
         <LinearLayout
-            android:id="@+id/ll_conversation"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
-            android:orientation="vertical"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp">
+            android:clipToPadding="true"
+            android:orientation="horizontal"
+            >
 
-            <ImageView
-                android:layout_width="wrap_content"
+            <!--会话-->
+            <LinearLayout
+                android:id="@+id/ll_conversation"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/ic_message_white_24dp"/>
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp">
 
-            <TextView
-                android:id="@+id/tv_conversation"
-                android:layout_width="wrap_content"
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ic_message_white_24dp"/>
+
+                <TextView
+                    android:id="@+id/tv_conversation"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/dialog_text"
+                    android:textColor="@color/colorOrange"/>
+
+            </LinearLayout>
+
+
+            <!--分组-->
+            <LinearLayout
+                android:id="@+id/ll_group"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/dialog_text"
-                android:textColor="@color/colorOrange"/>
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ic_group_white_24dp"/>
+
+                <TextView
+                    android:id="@+id/tv_group"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/group_text"
+                    android:textColor="@color/colorWhite"/>
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/ll_search"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ic_search_white_24dp"/>
+
+                <TextView
+                    android:id="@+id/tv_search"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/search_text"
+                    android:textColor="@color/colorWhite"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
 
-        <!--分组-->
-        <LinearLayout
-            android:id="@+id/ll_group"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
-            android:orientation="vertical"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_group_white_24dp"/>
-
-            <TextView
-                android:id="@+id/tv_group"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/group_text"
-                android:textColor="@color/colorWhite"/>
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:id="@+id/ll_search"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
-            android:orientation="vertical"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_search_white_24dp"/>
-
-            <TextView
-                android:id="@+id/tv_search"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/search_text"
-                android:textColor="@color/colorWhite"/>
-
-        </LinearLayout>
-
+        <View
+            android:id="@+id/view_line"
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:background="@color/colorRed"/>
     </LinearLayout>
-
-
-    <View
-        android:id="@+id/view_line"
-        android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:background="@color/colorRed"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_page"
