--- a/app/src/main/res/layout/activity_compose_sms.xml
+++ b/app/src/main/res/layout/activity_compose_sms.xml
@@ -9,6 +9,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.john.simulatesms.activity.ComposeSmsActivity">
+    tools:context=".ui.activity.ComposeSmsActivity">
 
 </RelativeLayout>
