--- a/app/src/main/res/layout/activity_send_new_sms.xml
+++ b/app/src/main/res/layout/activity_send_new_sms.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="1"
-    tools:context="com.example.john.simulatesms.activity.SendNewSmsActivity">
+    tools:context=".ui.activity.SendNewSmsActivity">
 
     <include
         layout="@layout/layout_titlebar"
