--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -3,7 +3,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              tools:context="com.example.john.simulatesms.fragment.ConversationFragment">
+              tools:context=".ui.fragment.ConversationFragment">
 
     <ListView
         android:id="@+id/lv_group_content"
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:background="@drawable/selector_btn_bg"
-            android:text="@string/btn_edit_text"/>
+            android:text="@string/btn_new_group_text"/>
 
     </LinearLayout>
 </LinearLayout>
