--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -2,7 +2,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="com.example.john.simulatesms.fragment.ConversationFragment">
+             tools:context=".ui.fragment.ConversationFragment">
 
     <TextView
         android:layout_width="wrap_content"
